@@ -3,6 +3,10 @@
 # $Header: $
 
   16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
+  emacs-18.59-r2.ebuild:
+  removed Header, prepared for eselect
+
+  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
   +emacs-18.59-r2.ebuild, +files/emacs-21.2-sh.patch,
   +files/emacs-21.3-amd64.patch, +files/emacs-21.3-hppa.patch,
   +files/emacs-21.3-ppc64.patch, +files/emacs-21.3-xorg.patch,
